text-right alignment added for 'Current Date'

--- a/src/main/resources/templates/dateboot.html
+++ b/src/main/resources/templates/dateboot.html
@@ -15,6 +15,13 @@
 <body>
 
 <div class="container">
+
+
+
+
+    <h2 class="text-right">Current Date:</h2>
+    <p th:text="${shortMonthFormat}"></p>
+
 <h1>Name</h1>
 <span>Jerilyn</span>
 
@@ -33,9 +40,8 @@
 <h6>Anything Else</h6>
 <span></span>
 
-<h2 class="text right">Current Date:</h2>
-<p th:text="${shortMonthFormat}"></p>
-</div>
 
+</div>
+</div>
 </body>
 </html>
